Added a missing credit.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@467 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/README
+++ b/Help/README
@@ -18,7 +18,9 @@ you will require the 'pygtk' (or 'gnome-python') package.
 To run, click on its icon in a filer window.
 
 No installation is required, but you can copy it anywhere you want using
-the filer...
+the filer.
+
+The time display was inspired by Jon Ribbens' RoughtTime clock.
 
 
 Instructions
