Main window widgets don't grab the focus (looks better).
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@470 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -2,6 +2,10 @@
 			Reminds you about things
 			by Thomas Leonard
 
+19-Jan-2001
+~~~~~~~~~~~
+Main window widgets don't grab the focus (looks better).
+
 13-Jan-2001
 ~~~~~~~~~~~
 Started.
