Added release info to Changes.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@681 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -2,7 +2,7 @@
 			Reminds you about things
 			by Thomas Leonard
 
-29-May-2001 (29-May-2001)
+29-May-2001 (Release 0.1.1)
 ~~~~~~~~~~~
 Added AppInfo file.
 
