Switched to using ROX-Lib.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@686 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -2,6 +2,10 @@
 			Reminds you about things
 			by Thomas Leonard
 
+30-May-2001
+~~~~~~~~~~~
+Switched to using ROX-Lib.
+
 29-May-2001 (Release 0.1.1)
 ~~~~~~~~~~~
 Added AppInfo file.
