Beep and wait a second before showing an alarm. Otherwise, if an alarm appears while you're typing you can lose it.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@744 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -2,6 +2,11 @@
 			Reminds you about things
 			by Thomas Leonard
 
+17-Jul-2001
+~~~~~~~~~~~
+Beep and wait a second before showing an alarm. Otherwise, if an alarm
+appears while you're typing you can lose it.
+
 30-May-2001
 ~~~~~~~~~~~
 Switched to using ROX-Lib.
