Bugfix: Messages with <, > or & characters didn't save correctly.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@837 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -2,6 +2,10 @@
 			Reminds you about things
 			by Thomas Leonard
 
+25-Sep-2001
+~~~~~~~~~~~
+Bugfix: Messages with <, > or & characters didn't save correctly.
+
 17-Jul-2001
 ~~~~~~~~~~~
 Beep and wait a second before showing an alarm. Otherwise, if an alarm
