--- a/Help/README
+++ b/Help/README
@@ -9,7 +9,7 @@ items. It displays the next few entries in a small window, and can also be
 instructed to beep and bring up a window with a message later.
 
 It's written in python, so you don't need to compile it before using it, but
-you will require the 'pygtk' (or 'gnome-python') package.
+you will require the 'pygtk' (or 'gnome-python') package, and ROX-Lib:
 
 	http://rox.sourceforge.net
 
