Make 'Edit' the default button when an alarm appears, not 'Remove'.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@912 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -2,6 +2,10 @@
 			Reminds you about things
 			by Thomas Leonard
 
+09-Nov-2001
+~~~~~~~~~~~
+Make 'Edit' the default button when an alarm appears, not 'Remove'.
+
 25-Sep-2001 (Release 1.0.0)
 ~~~~~~~~~~~
 Bugfix: Messages with <, > or & characters didn't save correctly.
