Turned on word-wrapping in the editor dialog. New release!
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@1676 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -2,6 +2,10 @@
 			Reminds you about things
 			by Thomas Leonard
 
+13-Jul-2002 (Release 1.9.0)
+~~~~~~~~~~~
+Turned on word-wrapping in the editor dialog.
+
 03-Jul-2002
 ~~~~~~~~~~~
 Upgraded to Gtk+-2.0 and ROX-Lib2. New features:
