Toggle hidden had stopped working with new pygtk.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@1901 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+10-Sep-2002
+~~~~~~~~~~~
+Toggle hidden had stopped working with new pygtk.
+
 07-Aug-2002
 ~~~~~~~~~~~
 Text box for memo message now scrolls correctly (instead of just getting
