--- a/Help/Changes
+++ b/Help/Changes
@@ -5,7 +5,11 @@
 TODO:
 - Option/button to speak the time
 
-28-Oct-2002 (Release 1.9.1)
+20-Nov-2002 (Release 1.9.1)
+~~~~~~~~~~~
+Hack around another pygtk reference counting bug.
+
+28-Oct-2002
 ~~~~~~~~~~~
 Support pygtk 1.99.12 (RedHat 8.0) as well as current versions.
 Hack around pygtk reference counting bug.
