Upgraded to cope with pygtk-1.99.15.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@2422 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+11-Feb-2003
+~~~~~~~~~~~
+Upgraded to cope with pygtk-1.99.15.
+
 20-Nov-2002 (Release 1.9.1)
 ~~~~~~~~~~~
 Hack around another pygtk reference counting bug.
