--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+31-Mar-2003 (Release 1.9.2)
+~~~~~~~~~~~
+New release.
+
 11-Feb-2003
 ~~~~~~~~~~~
 Upgraded to cope with pygtk-1.99.15.
