New icon (Geoff Youngs).
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@2699 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+16-May-2003
+~~~~~~~~~~~
+New icon (Geoff Youngs).
+
 31-Mar-2003 (Release 1.9.2)
 ~~~~~~~~~~~
 New release.
