Bugfix: '12 hour' clock option was showing 24 hour times.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@2834 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+27-Jun-2003
+~~~~~~~~~~~
+Bugfix: '12 hour' clock option was showing 24 hour times.
+
 16-May-2003
 ~~~~~~~~~~~
 New icon (Geoff Youngs).
