added italian translation
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@2846 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+04-Jul-2003
+~~~~~~~~~~~
+Added italian translation in AppInfo.xml (Yuri Bongiorno)
+
 01-Jul-2003
 ~~~~~~~~~~~
 Bugfix: Dates didn't change format at midnight (eg 1 Jul -> Today)
