Try to access ROX-Lib through Zero Install, if possible.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@2914 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+26-Jul-2003 (Release 1.9.3)
+~~~~~~~~~~~
+Try to access ROX-Lib through Zero Install, if possible.
+
 04-Jul-2003
 ~~~~~~~~~~~
 Added italian translation in AppInfo.xml (Yuri Bongiorno)
