Bugfix: 'at' got turned off when loading with Python 2.3.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@3040 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+18-Sep-2003
+~~~~~~~~~~~
+Bugfix: 'at' got turned off when loading with Python 2.3.
+
 26-Jul-2003 (Release 1.9.3)
 ~~~~~~~~~~~
 Try to access ROX-Lib through Zero Install, if possible.
