--- a/Help/Changes
+++ b/Help/Changes
@@ -5,7 +5,7 @@
 TODO:
 - Option/button to speak the time
 
-18-Sep-2003
+18-Sep-2003 (Release 1.9.4)
 ~~~~~~~~~~~
 Bugfix: 'at' got turned off when loading with Python 2.3.
 
