Internationalization! Added italian translation (Yuri Bongiorno).
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@3252 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,10 @@
 TODO:
 - Option/button to speak the time
 
+07-Dec-2003
+~~~~~~~~~~~
+Internationalization! Added italian translation (Yuri Bongiorno).
+
 18-Sep-2003 (Release 1.9.4)
 ~~~~~~~~~~~
 Bugfix: 'at' got turned off when loading with Python 2.3.
