Use freedesktop.org basedir spec for storing config files, and use newer findrox (Thomas Leonard).
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@3825 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/Changes
+++ b/Help/Changes
@@ -5,6 +5,11 @@
 TODO:
 - Option/button to speak the time
 
+20-Feb-2005
+~~~~~~~~~~~
+Use freedesktop.org basedir spec for storing config files, and use newer
+findrox (Thomas Leonard).
+
 07-Dec-2003
 ~~~~~~~~~~~
 Internationalization! Added italian translation (Yuri Bongiorno).
