--- a/Help/Changes
+++ b/Help/Changes
@@ -5,7 +5,7 @@
 TODO:
 - Option/button to speak the time
 
-20-Feb-2005
+20-Feb-2005 (Release 1.9.5)
 ~~~~~~~~~~~
 Use freedesktop.org basedir spec for storing config files, and use newer
 findrox (Thomas Leonard).
