--- a/Help/README
+++ b/Help/README
@@ -6,17 +6,24 @@ Brief
 ~~~~~
 Memo is a small utility which you can use to store appointments and 'TODO'
 items. It displays the next few entries in a small window, and can also be
-instructed to beep and bring up alert windows at set times.
+instructed to bring up alert windows at set times.
 
-It's written in python, so you don't need to compile it before using it, but
-you will require ROX-Lib2 (the Gtk+-2.0 version of ROX-Lib):
+It's written in Python, so you don't need to compile it before using it.
+If you're NOT using Zero Install, you'll need to install ROX-Lib before
+running Memo:
 
-	http://rox.sourceforge.net
+	http://rox.sourceforge.net/desktop/ROX-Lib
 
 To run Memo, click on its icon in a filer window, or run the 'AppRun' script.
 
 No installation is required, but you can copy it anywhere you want using
 the filer.
+
+If you have a D-BUS notification service running then it will use that to
+display alarms. Otherwise, it will use a built-in dialog box. For more
+information about notification services, see:
+
+	http://www.galago-project.org/specs/notification/
 
 The time display was inspired by Jon Ribbens' RoughtTime clock.
 
@@ -79,7 +86,7 @@ one) there are two extra buttons. Hide works as in the alert box (described
 above), and Delete gets rid of the memo completely. There is no undelete;
 use Hide if you might want it back.
 
-Not all memos are display in the main window. Hidden memos aren't shown, and
+Not all memos are displayed in the main window. Hidden memos aren't shown, and
 neither are memos far in the future. To see all memos, open the menu and
 choose 'Show All...'. This window displays a list of all memos that Memo
 knows about.
@@ -124,4 +131,4 @@ Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 Please report any bugs to the mailing list:
 
-	http://rox.sourceforge.net/phpwiki/index.php/MailingLists
+	http://rox.sourceforge.net/desktop/lists
