Added support for running as an applet from MiniClock (Thomas Leonard; suggested by Ken Hayber). Memo also now checks that an existing copy isn't running, and refuses to start if so.
git-svn-id: https://rox.svn.sourceforge.net/svnroot/rox/trunk/Memo/trunk/Memo@4781 66de3db3-b00d-0410-b41b-f4738ad19bea

--- a/Help/README
+++ b/Help/README
@@ -27,6 +27,9 @@ information about notification services, see:
 
 The time display was inspired by Jon Ribbens' RoughtTime clock.
 
+Memo can also be run as a panel applet on a ROX-Filer panel. This code is
+based on code from MiniClock, by Edoardo Spadolini and Dennis Tomas.
+
 
 Instructions
 ~~~~~~~~~~~~
